--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.18.0",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "sortablejs": "^1.15.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0"
