incomplete seeds for user, task and project

--- a/seeds/project-seeds.json
+++ b/seeds/project-seeds.json
@@ -1,16 +1,10 @@
 [{
-    "comment": "First comment",
-    "user_id": 1,
-    "task_id": 1
+    "name": "Project 1"
   },
-{
-    "comment": "Second comment",
-    "user_id": 2,
-    "task_id": 1
-  },
-{
-    "comment": "Third comment",
-    "user_id": 3,
-    "task_id": 1
+  {
+    "name": "Project 2"
+  }, 
+  {
+    "name": "Project 3"
   }
 ]
