--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
