--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.9.11",
     "sequelize": "^6.37.1",
+    "socket.io": "^4.7.4",
     "sortablejs": "^1.15.2"
   },
   "devDependencies": {
