--- a/seeds/projectUser-seeds.json
+++ b/seeds/projectUser-seeds.json
@@ -1,154 +1,154 @@
 [
     {
         "user_id": 1,
-        "task_id": 5
+        "project_id": 5
     },
     {
         "user_id": 1,
-        "task_id": 8
+        "project_id": 8
     },
     {
         "user_id": 2,
-        "task_id": 2
+        "project_id": 2
     },
     {
         "user_id": 2,
-        "task_id": 4
+        "project_id": 4
     },
     {
         "user_id": 3,
-        "task_id": 6
+        "project_id": 6
     },
     {
         "user_id": 3,
-        "task_id": 9
+        "project_id": 9
     },
     {
         "user_id": 4,
-        "task_id": 1
+        "project_id": 1
     },
     {
         "user_id": 4,
-        "task_id": 8
+        "project_id": 8
     },
     {
         "user_id": 5,
-        "task_id": 3
+        "project_id": 3
     },
     {
         "user_id": 5,
-        "task_id": 9
+        "project_id": 9
     },
     {
         "user_id": 6,
-        "task_id": 8
+        "project_id": 8
     },
     {
         "user_id": 7,
-        "task_id": 10
+        "project_id": 10
     },
     {
         "user_id": 7,
-        "task_id": 7
+        "project_id": 7
     },
     {
         "user_id": 8,
-        "task_id": 3
+        "project_id": 3
     },
     {
         "user_id": 8,
-        "task_id": 6
+        "project_id": 6
     },
     {
         "user_id": 9,
-        "task_id": 1
+        "project_id": 1
     },
     {
         "user_id": 9,
-        "task_id": 8
+        "project_id": 8
     },
     {
         "user_id": 10,
-        "task_id": 3
+        "project_id": 3
     },
     {
         "user_id": 10,
-        "task_id": 9
+        "project_id": 9
     },
     {
         "user_id": 11,
-        "task_id": 4
+        "project_id": 4
     },
     {
         "user_id": 11,
-        "task_id": 7
+        "project_id": 7
     },
     {
         "user_id": 12,
-        "task_id": 5
+        "project_id": 5
     },
     {
         "user_id": 12,
-        "task_id": 1
+        "project_id": 1
     },
     {
         "user_id": 13,
-        "task_id": 3
+        "project_id": 3
     },
     {
         "user_id": 13,
-        "task_id": 9
+        "project_id": 9
     },
     {
         "user_id": 14,
-        "task_id": 4
+        "project_id": 4
     },
     {
         "user_id": 14,
-        "task_id": 10
+        "project_id": 10
     },
     {
         "user_id": 15,
-        "task_id": 8
+        "project_id": 8
     },
     {
         "user_id": 15,
-        "task_id": 1
+        "project_id": 1
     },
     {
         "user_id": 16,
-        "task_id": 6
+        "project_id": 6
     },
     {
         "user_id": 16,
-        "task_id": 3
+        "project_id": 3
     },
     {
         "user_id": 17,
-        "task_id": 4
+        "project_id": 4
     },
     {
         "user_id": 17,
-        "task_id": 2
+        "project_id": 2
     },
     {
         "user_id": 18,
-        "task_id": 7
+        "project_id": 7
     },
     {
         "user_id": 19,
-        "task_id": 5
+        "project_id": 5
     },
     {
         "user_id": 19,
-        "task_id": 8
+        "project_id": 8
     },
     {
         "user_id": 20,
-        "task_id": 6
+        "project_id": 6
     },
     {
         "user_id": 20,
-        "task_id": 3
+        "project_id": 3
     }
 ]
